r and w working. jvm params set.