@@ -5,4 +5,14 @@
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.7.0"]
                  [com.apa512/rethinkdb "0.11.0"]
-                 [jepsen "0.0.6"]])
+                 [jepsen "0.0.6"]]
+  :jvm-opts ["-Xmx4g"
+             "-XX:+UseConcMarkSweepGC"
+             "-XX:+UseParNewGC"
+             "-XX:+CMSParallelRemarkEnabled"
+             "-XX:+AggressiveOpts"
+             "-XX:+UseFastAccessorMethods"
+             "-XX:MaxInlineLevel=32"
+             "-XX:MaxRecursiveInlineLevel=2"
+             "-XX:-OmitStackTraceInFastThrow"
+             "-server"])
